# FixWay_Escritorio

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
public/: firebase-messaging-sw.js
public/models/: license.txt  scene.gltf
src/: App.jsx  firebase.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Test/: AgregarAutomovil.test.jsx  AgregarAutomovilMecanico.test.jsx  AgregarCliente.test.jsx  AgregarFactura.test.jsx  AgregarInventario.test.jsx  AgregarUsuario.test.jsx  GenerarFactura.test.jsx  GenerarFacturaVendedor.test.jsx  GenerarListadoMantencionMecanico.test.jsx  GenerarQR.test.jsx  GenerarQRMecanico.test.jsx  GestionMantencion.test.jsx  GestionMantencionesMecanico.test.jsx  GraficoMisBoletas.test.jsx  GraficoMisBoletasVendedor.test.jsx  GraficoMisFacturas.test.jsx  GraficoMisFacturasVendedor.test.jsx  GraficoTipoPago.test.jsx  GraficoTipoPagoVendedor.test.jsx  HistorialMantencion.test.jsx  HistorialVentas.test.jsx  HistorialVentasVendedor.test.jsx  ListadoAutomovil.test.jsx  ListadoFacturas.test.jsx  ListadoMisFacturas.test.jsx  ListarCliente.test.jsx  ListarInventario.test.jsx  ListarInventarioMecanico.test.jsx  ListarUsuario.test.jsx  ProductoMasVendidoMecanico.test.jsx
src/components/: 404.jsx  ProtectedRouter.jsx  RecuperarContrasena.jsx  loadingScreen.css  loadingScreen.jsx  login.css  login.jsx
src/context/: AuthContext.jsx  darkMode.jsx
src/hooks/: tensorFlowModel.jsx  validadorPatente.jsx  validadorVIN.jsx
src/styles/: Globals.css  login.css
src/test/: GenerarQR.test.jsx  (+16 more)
(+108 files in other folders)
